clipping almost fixed

--- a/src/index.css
+++ b/src/index.css
@@ -399,10 +399,8 @@
     font-family: Courier New, Courier, monospace;
     font-size: 15px;
     font-weight: 700;
-    overflow: hidden;
     height: 100vh;
     height: 100dvh;
-    position: fixed;
     width: 100%;
     /* Prevent keyboard from resizing viewport on iOS */
     overscroll-behavior: none;
@@ -417,7 +415,6 @@
   }
 
   html {
-    overflow: hidden;
     height: 100vh;
     height: 100dvh;
     background-color: #FBF8E8;
